remove graphviz snippet

--- a/Decision Trees.ipynb
+++ b/Decision Trees.ipynb
@@ -57,13 +57,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import export_graphviz\n",
+    "# from sklearn.tree import export_graphviz\n",
     "\n",
-    "f = open(\"iris_tree.dot\", 'w')\n",
-    "export_graphviz(tree_clf,out_file=f,\n",
-    "               feature_names=iris.feature_names[2:],\n",
-    "               class_names=iris.target_names,\n",
-    "               rounded=True, filled=True)\n"
+    "# f = open(\"iris_tree.dot\", 'w')\n",
+    "# export_graphviz(tree_clf,out_file=f,\n",
+    "#                feature_names=iris.feature_names[2:],\n",
+    "#                class_names=iris.target_names,\n",
+    "#                rounded=True, filled=True)\n"
    ]
   },
   {
