--- a/Ensembling and Boosting.ipynb
+++ b/Ensembling and Boosting.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
        "       [0.29787234, 0.70212766]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,6 +352,40 @@
     "# belonging to the negative class):\n",
     "\n",
     "bag_clf.oob_decision_function_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RANDOM PATCHES AND RANDOM SUBSPACES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The BaggingClassifier class supports sampling the features as well. Sampling is\n",
+    "# controlled by two hyperparameters: max_features and bootstrap_features. They\n",
+    "# work the same way as max_samples and bootstrap, but for feature sampling instead\n",
+    "# of instance sampling. Thus, each predictor will be trained on a random subset of the\n",
+    "# input features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This technique is particularly useful when you are dealing with high-dimensional\n",
+    "# inputs (such as images). Sampling both training instances and features is called the\n",
+    "# Random Patches method. Keeping all training instances (by setting bootstrap=False\n",
+    "# and max_samples=1.0) but sampling features (by setting bootstrap_features to\n",
+    "# True and/or max_features to a value smaller than 1.0) is called the Random Subspaces\n",
+    "# method."
    ]
   },
   {
