add Random Forests

--- a/Ensembling and Boosting.ipynb
+++ b/Ensembling and Boosting.ipynb
@@ -389,6 +389,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RANDOM FORESTS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=500, max_leaf_nodes=16, n_jobs=-1)\n",
+    "rnd_clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred_rf = rnd_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing Score 0.92\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Testing Score\", accuracy_score(y_pred, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rnd_clf.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# With a few exceptions, a RandomForestClassifier has all the hyperparameters of a\n",
+    "# DecisionTreeClassifier (to control how trees are grown), plus all the hyperparameters\n",
+    "# of a BaggingClassifier to control the ensemble itself."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
