--- a/Ensembling and Boosting.ipynb
+++ b/Ensembling and Boosting.ipynb
@@ -85,10 +85,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression 0.76\n",
+      "LogisticRegression 0.88\n",
       "RandomForestClassifier 0.92\n",
-      "SVC 0.88\n",
-      "VotingClassifier 0.84\n"
+      "SVC 0.96\n",
+      "VotingClassifier 0.92\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
     {
      "data": {
       "text/plain": [
-       "0.88"
+       "0.9333333333333333"
       ]
      },
      "execution_count": 15,
@@ -255,90 +255,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.31052632, 0.68947368],\n",
-       "       [0.56914894, 0.43085106],\n",
-       "       [1.        , 0.        ],\n",
-       "       [1.        , 0.        ],\n",
-       "       [0.91428571, 0.08571429],\n",
-       "       [0.00543478, 0.99456522],\n",
-       "       [0.11764706, 0.88235294],\n",
-       "       [0.66292135, 0.33707865],\n",
-       "       [0.9895288 , 0.0104712 ],\n",
-       "       [1.        , 0.        ],\n",
-       "       [0.10344828, 0.89655172],\n",
+       "array([[0.97883598, 0.02116402],\n",
        "       [0.        , 1.        ],\n",
        "       [0.        , 1.        ],\n",
-       "       [0.2849162 , 0.7150838 ],\n",
-       "       [0.24858757, 0.75141243],\n",
-       "       [0.27118644, 0.72881356],\n",
-       "       [1.        , 0.        ],\n",
-       "       [0.85714286, 0.14285714],\n",
-       "       [0.07407407, 0.92592593],\n",
-       "       [0.95263158, 0.04736842],\n",
-       "       [0.43      , 0.57      ],\n",
-       "       [1.        , 0.        ],\n",
-       "       [0.01129944, 0.98870056],\n",
-       "       [0.82022472, 0.17977528],\n",
-       "       [0.11627907, 0.88372093],\n",
-       "       [1.        , 0.        ],\n",
-       "       [1.        , 0.        ],\n",
-       "       [0.00606061, 0.99393939],\n",
-       "       [0.88135593, 0.11864407],\n",
+       "       [0.07222222, 0.92777778],\n",
        "       [0.        , 1.        ],\n",
-       "       [0.03804348, 0.96195652],\n",
        "       [1.        , 0.        ],\n",
+       "       [0.5027933 , 0.4972067 ],\n",
        "       [1.        , 0.        ],\n",
-       "       [0.94350282, 0.05649718],\n",
-       "       [1.        , 0.        ],\n",
-       "       [0.84946237, 0.15053763],\n",
-       "       [0.31884058, 0.68115942],\n",
-       "       [0.0052356 , 0.9947644 ],\n",
        "       [0.        , 1.        ],\n",
-       "       [0.02162162, 0.97837838],\n",
-       "       [0.98924731, 0.01075269],\n",
        "       [1.        , 0.        ],\n",
+       "       [0.00537634, 0.99462366],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.55445545, 0.44554455],\n",
+       "       [0.41530055, 0.58469945],\n",
+       "       [0.        , 1.        ],\n",
        "       [0.99447514, 0.00552486],\n",
-       "       [0.03589744, 0.96410256],\n",
-       "       [0.87765957, 0.12234043],\n",
-       "       [0.        , 1.        ],\n",
-       "       [0.        , 1.        ],\n",
-       "       [0.99411765, 0.00588235],\n",
+       "       [0.97512438, 0.02487562],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.0052356 , 0.9947644 ],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.27717391, 0.72282609],\n",
+       "       [0.79411765, 0.20588235],\n",
+       "       [0.01111111, 0.98888889],\n",
+       "       [0.96855346, 0.03144654],\n",
+       "       [0.43814433, 0.56185567],\n",
+       "       [0.91860465, 0.08139535],\n",
+       "       [0.97814208, 0.02185792],\n",
+       "       [0.03108808, 0.96891192],\n",
+       "       [0.95135135, 0.04864865],\n",
+       "       [0.94382022, 0.05617978],\n",
+       "       [1.        , 0.        ],\n",
+       "       [0.97484277, 0.02515723],\n",
        "       [1.        , 0.        ],\n",
        "       [0.        , 1.        ],\n",
-       "       [0.24352332, 0.75647668],\n",
-       "       [0.78142077, 0.21857923],\n",
-       "       [0.58100559, 0.41899441],\n",
-       "       [0.6416185 , 0.3583815 ],\n",
-       "       [0.83414634, 0.16585366],\n",
-       "       [0.39790576, 0.60209424],\n",
-       "       [0.0952381 , 0.9047619 ],\n",
-       "       [0.79393939, 0.20606061],\n",
-       "       [0.99431818, 0.00568182],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.93604651, 0.06395349],\n",
+       "       [0.98421053, 0.01578947],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.12179487, 0.87820513],\n",
+       "       [0.99418605, 0.00581395],\n",
+       "       [0.04568528, 0.95431472],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.        , 1.        ],\n",
        "       [1.        , 0.        ],\n",
-       "       [0.00961538, 0.99038462],\n",
+       "       [0.04864865, 0.95135135],\n",
+       "       [0.52604167, 0.47395833],\n",
+       "       [0.97191011, 0.02808989],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.        , 1.        ],\n",
        "       [1.        , 0.        ],\n",
-       "       [0.99494949, 0.00505051],\n",
-       "       [0.1910828 , 0.8089172 ],\n",
-       "       [0.74331551, 0.25668449],\n",
-       "       [0.92820513, 0.07179487],\n",
+       "       [0.9       , 0.1       ],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.71921182, 0.28078818],\n",
+       "       [0.60989011, 0.39010989],\n",
        "       [1.        , 0.        ],\n",
+       "       [0.98477157, 0.01522843],\n",
+       "       [0.92432432, 0.07567568],\n",
+       "       [0.1402439 , 0.8597561 ],\n",
+       "       [0.66489362, 0.33510638],\n",
+       "       [0.20879121, 0.79120879],\n",
+       "       [0.25668449, 0.74331551],\n",
        "       [1.        , 0.        ],\n",
-       "       [0.01595745, 0.98404255],\n",
-       "       [0.4519774 , 0.5480226 ],\n",
-       "       [0.28648649, 0.71351351],\n",
+       "       [0.06703911, 0.93296089],\n",
+       "       [0.98369565, 0.01630435],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.99390244, 0.00609756],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.        , 1.        ],\n",
+       "       [0.00606061, 0.99393939],\n",
+       "       [0.11731844, 0.88268156],\n",
+       "       [0.22222222, 0.77777778],\n",
        "       [1.        , 0.        ],\n",
-       "       [0.18518519, 0.81481481],\n",
+       "       [0.        , 1.        ],\n",
        "       [1.        , 0.        ],\n",
-       "       [0.29787234, 0.70212766]])"
+       "       [0.91758242, 0.08241758]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "1.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,11 +458,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### FEATURE IMPORTANCE"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import load_iris\n",
+    "iris = load_iris()\n",
+    "rnd_clf = RandomForestClassifier(n_estimators=500)"
+   ]
   }
  ],
  "metadata": {
