--- a/Ensembling and Boosting.ipynb
+++ b/Ensembling and Boosting.ipynb
@@ -466,14 +466,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sepal length (cm) 0.10837571705383037\n",
+      "sepal width (cm) 0.02103586567541239\n",
+      "petal length (cm) 0.44678836027992286\n",
+      "petal width (cm) 0.4238000569908345\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "iris = load_iris()\n",
-    "rnd_clf = RandomForestClassifier(n_estimators=500)"
+    "rnd_clf = RandomForestClassifier(n_estimators=500, n_jobs=-1)\n",
+    "rnd_clf.fit(iris['data'],iris['target'])\n",
+    "for name, score in zip(iris['feature_names'], rnd_clf.feature_importances_):\n",
+    "    print(name, score)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BOOSTING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Boosting (originally called hypothesis boosting) refers to any Ensemble method that\n",
+    "# can combine several weak learners into a strong learner. The general idea of most\n",
+    "# boosting methods is to train predictors sequentially, each trying to correct its predecessor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The mostpopular are AdaBoost(short for adaptive boosting) and Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### AdaBoost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# One way for a new predictor to correct its predecessor is to pay a bit more attention\n",
+    "# to the training instances that the predecessor underfitted. This results in new predictors\n",
+    "# focusing more and more on the hard cases. This is the technique used by\n",
+    "# AdaBoost."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There is one important drawback to this sequential learning technique:\n",
+    "# it cannot be parallelized (or only partially), since each predictor\n",
+    "# can only be trained after the previous predictor has been\n",
+    "# trained and evaluated. As a result, it does not scale as well as bagging\n",
+    "# or pasting."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scikit-Learn uses a multiclass version of AdaBoost called SAMME16 (which stands for\n",
+    "# Stagewise Additive Modeling using a Multiclass Exponential loss function). When there\n",
+    "# are just two classes, SAMME is equivalent to AdaBoost. If the predictors can estimate\n",
+    "# class probabilities (i.e., if they have a predict_proba() method), Scikit-Learn can use\n",
+    "# a variant of SAMME called SAMME.R (the R stands for “Real”), which relies on class\n",
+    "# probabilities rather than predictions and generally performs better."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The following code trains an AdaBoost classifier based on 200 Decision Stumps using\n",
+    "# Scikit-Learn’s AdaBoostClassifier class (as you might expect, there is also an Ada\n",
+    "# BoostRegressor class). A Decision Stump is a Decision Tree with max_depth=1—in\n",
+    "# other words, a tree composed of a single decision node plus two leaf nodes. This is\n",
+    "# the default base estimator for the AdaBoostClassifier class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "AdaBoostClassifier(base_estimator=DecisionTreeClassifier(max_depth=1),\n",
+       "                   learning_rate=0.5, n_estimators=200)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "\n",
+    "ada_clf = AdaBoostClassifier(DecisionTreeClassifier(max_depth=1),\n",
+    "                            n_estimators=200, algorithm='SAMME.R',\n",
+    "                            learning_rate=0.5)\n",
+    "ada_clf.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = ada_clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ada_clf.score(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ada_clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
