--- a/DL Prac/Preprocessing.ipynb
+++ b/DL Prac/Preprocessing.ipynb
@@ -10,17 +10,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.8.5-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "Python 3.8.2 64-bit",
-   "display_name": "Python 3.8.2 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "69916212ca60b5f49953924cb6bf7d4e6cd853a4eeb57ff876fb53410dcfb4b0"
-    }
-   }
+   "name": "python38564bit13cf8cfd0056436a83cb264379e01931",
+   "display_name": "Python 3.8.5 64-bit"
   }
  },
  "nbformat": 4,
@@ -28,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'2.2.0-rc2'"
+       "'2.3.1'"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 2
     }
    ],
    "source": [
@@ -57,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,18 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(10,), dtype=int32, numpy=array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])>"
+       "<tf.Tensor: shape=(10,), dtype=int32, numpy=array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9], dtype=int32)>"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 4
     }
    ],
    "source": [
@@ -86,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +101,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 6
     }
    ],
    "source": [
@@ -115,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +169,35 @@
    "source": [
     "for item in dataset:\n",
     "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<BatchDataset shapes: (7,), types: tf.int32>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = dataset.map(lambda x : x*2)"
    ]
   },
   {
