--- a/DL Prac/Custom_TF/Custom_Models.ipynb
+++ b/DL Prac/Custom_TF/Custom_Models.ipynb
@@ -68,6 +68,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.compile(loss=huber_fn, optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_huber(threshold=1.0):\n",
+    "    def huber_fn(y_true, y_pred):\n",
+    "        error = y_true - y_pred\n",
+    "        is_small_error = tf.abs(error) < threshold\n",
+    "        squared_loss = tf.square(error) / 2\n",
+    "        linear_loss = threshold*tf.abs(error) - threshold**2/2\n",
+    "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    return huber_fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model.compile(loss=create_huber(2.0), optimizer='adam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HuberLoss(keras.losses.Loss):\n",
+    "    def __init__(self, threshold=1.0, **kwargs):\n",
+    "        self.threshold = threshold\n",
+    "        super().__init__(**kwargs)\n",
+    "    def call(self, y_true, y_pred):\n",
+    "        error = y_true - y_pred\n",
+    "        is_small_error = tf.abs(error) < self.threshold\n",
+    "        squared_loss = tf.square(error) / 2\n",
+    "        linear_loss = self.threshold*tf.abs(error) - self.threshold**2/2\n",
+    "        return tf.where(is_small_error, squared_loss, linear_loss)\n",
+    "    def get_config(self):\n",
+    "        base_config = super().get_config\n",
+    "        return {**base_config, \"threshold\":self.threshold}\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
