add softplus custom loss

--- a/DL Prac/Custom_TF/Custom_Models.ipynb
+++ b/DL Prac/Custom_TF/Custom_Models.ipynb
@@ -133,6 +133,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Custom Activation Functions, Initializers, Regularizers, and Constraint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_softplus(z):  # return value is just tf.nn.softplus(z)\n",
+    "    return tf.math.log(tf.exp(z) + 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
